hasta Ajax con Axios

--- a/Vídeos/8.Filtros.html
+++ b/Vídeos/8.Filtros.html
@@ -10,7 +10,7 @@
     <main id="app">
 
         <ul>
-            <li v-for="usuario in nombreCompleto"> {{ usuario}}</li>
+            <li v-for="usuario in nombreCompleto"> {{ usuario }}</li>
         </ul>
     </main>
 
@@ -21,11 +21,25 @@
            created() {
             fetch(this.url)
                 .then(respuesta => respuesta.json())
-                    .then(respuesta => this.usuarios = respuesta.results.map(usuario))
+                    .then(respuesta => this.usuarios = respuesta.results.map(usuario => usuario))
            },
            data: {
-            url: "",
+            url: "https://randomuser.me/api/?results=50",
+            usuarios: [],
            },
+           computed: {
+            nombreCompleto(){
+                return this.usuarios.map(usuario => `Nombre: ${usuario.title}: ${usuario.first} ${usuario.last}`)
+            }
+           },
+           filters: {
+            mayusculas(datos){
+                return datos.toUpperCase();
+            },
+            acortado(datos, cantidad){
+                return datos.substring(0, cantidad) + '...';
+            }
+           }
         });
         Vue.config.devtools = true;
     </script>
